--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -267,7 +267,7 @@ pnpm build
 2. **Test commands locally:**
 ```bash
 # From repository root
-node agents-cli/dist/index.js push examples/agent-configurations/graph.graph.ts
+node agents-cli/dist/index.js push examples/agent-configurations
 node agents-cli/dist/index.js chat
 ```
 
