--- a/agents-docs/content/docs/connecting-your-data/3rd-party-tools/exa.mdx
+++ b/agents-docs/content/docs/connecting-your-data/3rd-party-tools/exa.mdx
@@ -13,7 +13,7 @@ Install the [exa-js](https://github.com/exa-labs/exa-js) SDK
 import Exa from 'exa-js';
 import { agent, tool } from '@inkeep/agents-manage-api/builders';
 
-const exaAgent = agent({
+const exaAgent = subAgent({
   id: 'exa-agent',
   tenantId,
   name: 'exa',
