--- a/agents-docs/content/docs/talk-to-your-agents/api.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/api.mdx
@@ -1,14 +1,14 @@
 ---
-title: How to call your AI Agent Graph via a Vercel AI SDK format API
+title: How to call your AI Agent via a Vercel AI SDK format API
 sidebarTitle: Via API
-description: Use a raw HTTP request to stream responses from your agent graph over the Vercel AI SDK data stream protocol.
+description: Use a raw HTTP request to stream responses from your agent over the Vercel AI SDK data stream protocol.
 icon: LuNetwork
 keywords: API, Vercel AI SDK, streaming, SSE, data stream, agents, chat
 ---
 
 ## Overview
 
-This guide shows how to call your agent graph directly over HTTP and stream responses using the Vercel AI SDK data stream format. It covers the exact endpoint, headers, request body, and the event stream response you should expect.
+This guide shows how to call your agent directly over HTTP and stream responses using the Vercel AI SDK data stream format. It covers the exact endpoint, headers, request body, and the event stream response you should expect.
 
 <Tip>
   If you are building a React UI, consider our prebuilt components under [React UI Components](/talk-to-your-agents/react/chat-button). This page is for low-level HTTP usage.
