--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -94,7 +94,7 @@ pnpm add @inkeep/agents-ui
     **To get an API key:**
     1. Open the Visual Builder Dashboard
     2. Navigate to your Project → **API Keys**
-    3. Click **Create New Key** and select your agent graph
+    3. Click **Create New Key** and select your agent
     4. Copy the key (shown once) and store it in your environment variables
 
   </Tab>
@@ -186,5 +186,5 @@ pnpm add @inkeep/agents-ui
 | Property                  | Type   | Description                                         |
 | ------------------------- | ------ | --------------------------------------------------- |
 | `aiChatSettings`          | object | Configuration for the AI chat connection            |
-| `aiChatSettings.graphUrl` | string | The URL of your agent graph endpoint                |
+| `aiChatSettings.graphUrl` | string | The URL of your agent endpoint                |
 | `aiChatSettings.headers`  | object | Headers for authentication and graph identification |
