--- a/agents-docs/content/docs/typescript-sdk/push-pull-workflows.mdx
+++ b/agents-docs/content/docs/typescript-sdk/push-pull-workflows.mdx
@@ -233,7 +233,7 @@ graph TD
     J --> K{Export type}
 
     K -->|project call| L[Project Definition]
-    K -->|agentGraph call| M[Graph Definition]
+    K -->|agent call| M[Graph Definition]
     K -->|agent call| N[Agent Definition]
     K -->|tool call| O[Tool Definition]
     K -->|dataComponent call| P[Data Component]
