--- a/agents-docs/content/docs/visual-builder/headers.mdx
+++ b/agents-docs/content/docs/visual-builder/headers.mdx
@@ -9,7 +9,7 @@ keywords: headers, context fetchers, prompt variables, personalization
 
 ## Overview
 
-Headers allow you to pass request-specific values (like user IDs, authentication tokens, or organization metadata) to your agent graph at runtime via HTTP headers. These values are validated and made available throughout your agent system for:
+Headers allow you to pass request-specific values (like user IDs, authentication tokens, or organization metadata) to your agent at runtime via HTTP headers. These values are validated and made available throughout your agent system for:
 
 - **Context Fetchers**: Dynamic data retrieval based on request values
 - **External Tools**: Authentication and personalization for API calls
