--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -4,7 +4,7 @@ description: Create MCP servers that agents can use to access external services.
 icon: "LuServer"
 ---
 
-MCP servers provide tools that your agents can use to interact with external APIs and services. Once created, these servers are automatically synced to discover available tools, which can then be added to your agent graphs.
+MCP servers provide tools that your agents can use to interact with external APIs and services. Once created, these servers are automatically synced to discover available tools, which can then be added to your agents.
 
 <Snippet file="mcp/intro-create-and-add.mdx" />
 
