--- a/agents-docs/content/docs/visual-builder/project-management.mdx
+++ b/agents-docs/content/docs/visual-builder/project-management.mdx
@@ -39,7 +39,7 @@ When creating a project, you'll need to provide:
 
 Each project can contain:
 
-- **Agent Graphs**: Collections of AI agents that work together
+- **Agents**: Collections of AI agents that work together
 - **API Keys**: Authentication keys for accessing your agents via API
 - **MCP Servers**: Model Context Protocol servers for external tools
 - **Data Components**: Reusable data structures for your agents
@@ -338,6 +338,6 @@ DELETE /tenants/{tenantId}/crud/projects/{projectId}
 
 After creating a project, you can:
 
-- [Create your first agent graph](/visual-builder/graphs)
+- [Create your first agent](/visual-builder/graphs)
 - [Configure MCP servers for tools](/visual-builder/mcp-servers)
 - [Set up API keys for external access](/api-keys)
