--- a/agents-docs/content/docs/visual-builder/status-components.mdx
+++ b/agents-docs/content/docs/visual-builder/status-components.mdx
@@ -4,7 +4,7 @@ description: Configure intelligent status updates using structured components in
 icon: "LuClock"
 ---
 
-The Visual Builder provides powerful tools for configuring status updates across your agent graphs. These features keep users informed during long-running operations with structured component data.
+The Visual Builder provides powerful tools for configuring status updates across your agents. These features keep users informed during long-running operations with structured component data.
 
 ## Default Status Updates
 
@@ -149,7 +149,7 @@ Use the visual component designer to create structured status updates:
 
 ### Graph-Level Defaults
 
-Status components, summarizer models, and status update prompts are configured at the graph level and apply to all agents in that graph.
+Status components, summarizer models, and status update prompts are configured at the agent level and apply to all sub-agents in that agent.
 
 ## Best Practices
 
