--- a/agents-docs/content/docs/community/contributing/project-constraints.mdx
+++ b/agents-docs/content/docs/community/contributing/project-constraints.mdx
@@ -7,7 +7,7 @@ icon: "LuTriangleAlert"
 
 # Project Constraints and Validation
 
-The Inkeep Agent Framework implements multiple layers of validation to ensure that all agent graphs and resources are associated with valid projects.
+The Inkeep Agent Framework implements multiple layers of validation to ensure that all agents and resources are associated with valid projects.
 
 ## Database-Level Constraints
 
