--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -48,7 +48,7 @@ pnpm add @inkeep/agents-ui
     **To get an API key:**
     1. Open the Visual Builder Dashboard
     2. Navigate to your Project → **API Keys**
-    3. Click **Create New Key** and select your agent graph
+    3. Click **Create New Key** and select your agent
     4. Copy the key (shown once) and store it in your environment variables
 
   </Tab>
