--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
@@ -1,14 +1,14 @@
 ---
-title: How to connect Vercel AI SDK useChat to your Agent Graph
+title: How to connect Vercel AI SDK useChat to your Agent
 sidebarTitle: Via Vercel AI SDK
-description: Use the Vercel AI SDK's useChat hook to build React chat interfaces that stream responses from your agent graph.
+description: Use the Vercel AI SDK's useChat hook to build React chat interfaces that stream responses from your agent.
 icon: LuCode
 keywords: Vercel AI SDK, useChat, React, streaming, chat interface, agents
 ---
 
 ## Overview
 
-The Vercel AI SDK v5's `useChat` hook provides a React-friendly way to build chat interfaces that stream responses from your agent graph. This guide shows you how to configure `useChat` to connect to the agent framework's chat endpoint.
+The Vercel AI SDK v5's `useChat` hook provides a React-friendly way to build chat interfaces that stream responses from your agent. This guide shows you how to configure `useChat` to connect to the agent framework's chat endpoint.
 
 <Tip>
   The agent framework's `/api/chat` endpoint is compatible with Vercel AI SDK's streaming protocol. See [Via API](/talk-to-your-agents/api) for low-level HTTP details.
@@ -24,7 +24,7 @@ npm install ai @ai-sdk/react
 
 ## Basic Configuration
 
-Here's a minimal example of using `useChat` with your agent graph:
+Here's a minimal example of using `useChat` with your agent:
 
 ```tsx
 "use client";
@@ -40,7 +40,7 @@ export default function Page() {
       headers: {
         "x-inkeep-tenant-id": "default",
         "x-inkeep-project-id": "weather-project",
-        "x-inkeep-agent-id": "weather-graph",
+        "x-inkeep-agent-id": "weather-agent",
       },
     }),
   });
@@ -178,7 +178,7 @@ export default function Page() {
       headers: {
         "x-inkeep-tenant-id": "default",
         "x-inkeep-project-id": "weather-project",
-        "x-inkeep-agent-id": "weather-intermediate-graph",
+        "x-inkeep-agent-id": "weather-intermediate-agent",
         tz: "US/Pacific",
       },
     }),
@@ -271,7 +271,7 @@ NEXT_PUBLIC_AGENTS_RUN_API_URL=http://localhost:3003
 NEXT_PUBLIC_INKEEP_API_KEY=your-api-key
 NEXT_PUBLIC_TENANT_ID=your-tenant-id
 NEXT_PUBLIC_PROJECT_ID=your-project-id
-NEXT_PUBLIC_GRAPH_ID=your-graph-id
+NEXT_PUBLIC_AGENT_ID=your-agent-id
 ```
 
 <Note>
