--- a/agents-docs/content/docs/typescript-sdk/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials.mdx
@@ -49,7 +49,7 @@ The framework supports three credential store types, each suited for different a
 ### Basic Setup Example
 
 ```typescript
-import { mcpTool, credential, agent, agentGraph } from "@inkeep/agents-sdk";
+import { mcpTool, credential, subAgent, agent } from "@inkeep/agents-sdk";
 import { CredentialStoreType } from "@inkeep/agents-core";
 
 // Step 1: Create the credential
@@ -72,7 +72,7 @@ const stripeTool = mcpTool({
 });
 
 // Step 3: Add tool to agent
-const paymentAgent = agent({
+const paymentAgent = subAgent({
   id: 'payment-agent',
   name: 'Payment Agent',
   description: 'Handles payment processing',
